@@ -1,21 +1,9 @@
 # ID_Generator_Project
-Utilize Java and potentially other languages to create a group project from the ground up for Object Oriented Programming 
+Utilizes Java and the Javafx library to run an ID generator application with options for both student and faculty and a search function that lets a user sort through individuals within the database by inputting an ID# into the search bar
 
-Libraries: JavaFX
-Languages: Java, Git
+Instructions:
+Download the folder Working application, go into terminal and locate the directory in your files, enter into terminal the command below to run:
+java --module-path "lib" --add-modules javafx.controls,javafx.fxml -jar ID-Generator.jar
 
-Roadmap:
-
-Stage 1:
-- Create functions to generate an ID based on User inputs (PARTIALLY DONE)
-- Code ID sorting, searching and other functions to gurantee uniqueness of ID's
-- Gurantee all the above functions work for the in-terminal version of the project
-
-Stage 2:
-- Begin coding and implementation of a basic GUI using JavaFX
-- Rework functions from stage 1 to work with basic GUI 
-
-Stage 3: 
-- Create template for ID cards 
-- Implement CSS to improve look of the GUI 
-- Finalize documentation of project
+Started: September 27th, 2023
+Completed: November 26th, 2023
